--- a/eventos.html
+++ b/eventos.html
@@ -14,6 +14,8 @@
 
   <style>
     /* micro UX */
+    .clamp-2{display:-webkit-box;-webkit-line-clamp:2;-webkit-box-orient:vertical;overflow:hidden;}
+
     .reveal { opacity: 0; transform: translateY(18px); filter: blur(2px); transition: opacity .55s ease, transform .55s ease, filter .55s ease; }
     .reveal.show { opacity: 1; transform: translateY(0); filter: blur(0); }
 
@@ -195,6 +197,12 @@ const ddLabel = document.getElementById('filterLabel');
 let allItems = [];
 
 const safeStr = (v) => (v == null ? '' : String(v));
+const escapeHtml = (s) => safeStr(s)
+  .replace(/&/g,'&amp;')
+  .replace(/</g,'&lt;')
+  .replace(/>/g,'&gt;')
+  .replace(/"/g,'&quot;')
+  .replace(/'/g,'&#39;');
 const norm = (v) => safeStr(v).toLowerCase().trim();
 
 function setStatus(msg = "") {
@@ -304,7 +312,7 @@ function render(items) {
 
   const row = (ico, label, value) => {
     if (!value) return '';
-    return `<div class="flex items-center gap-2 text-xs text-slate-600">
+    return `<div class="flex items-center justify-end gap-2 text-xs text-slate-600 text-right">
       <i data-lucide="${ico}" class="h-4 w-4 text-slate-500"></i>
       <span class="font-semibold text-slate-700">${label}:</span>
       <span class="truncate">${safeStr(value)}</span>
@@ -336,59 +344,84 @@ function render(items) {
 
     const prize = moneyBRL(pick(d, ["prizeTotal","premiacao","premio","prize"], ""));
 
+    
     const b64 = safeStr(pick(d, ["photoBase64","fotoBase64","imageBase64","bannerBase64","foto","imagem"], "")).trim();
+    const iconNameRaw = safeStr(pick(d, ["icon","icone","symbol"], "")).trim();
+    const iconName = iconNameRaw && /^[a-z0-9-]+$/i.test(iconNameRaw) ? iconNameRaw : "";
+
     const thumb = (() => {
       if (b64) {
         const src = b64.startsWith("data:") ? b64 : `data:image/jpeg;base64,${b64}`;
         return `<img src="${src}" alt="Evento" class="h-14 w-14 rounded-2xl object-cover ring-1 ring-slate-200 bg-slate-100" loading="lazy" />`;
+      }
+      if (iconName) {
+        return `<div class="h-14 w-14 rounded-2xl bg-emerald-600/10 ring-1 ring-emerald-500/20 grid place-items-center">
+          <i data-lucide="${iconName}" class="h-7 w-7 text-emerald-700"></i>
+        </div>`;
       }
       return `<div class="h-14 w-14 rounded-2xl bg-emerald-600/10 ring-1 ring-emerald-500/20 grid place-items-center">
         <i data-lucide="${isPaid ? "badge-dollar-sign" : "trophy"}" class="h-6 w-6 text-emerald-700"></i>
       </div>`;
     })();
 
+    const progressRaw = safeStr(pick(d, ["progress","progresso","status","statusProgress","andamento"], "")).trim();
+    const progressTxt = progressRaw ? progressRaw.toUpperCase() : "";
+
+    const dateRaw = safeStr(pick(d, ["date","data","dia","day"], "")).trim();
+    const timeRaw = safeStr(pick(d, ["time","hora","hour"], "")).trim();
+    const dateTimeRaw = safeStr(pick(d, ["dateTime","datetime","startsAt","startAt","inicioAt","inicioEm"], "")).trim();
+    const dateTimeTxt = (dateTimeRaw || [dateRaw, timeRaw].filter(Boolean).join(" • ")).trim();
+
     const topPills = [
       iconPill("users", guildName),
       t.isXVX ? iconPill("swords", modeTxt.toUpperCase()) : iconPill("zap", modeTxt.toUpperCase()),
       isPaid ? iconPill("badge-dollar-sign", "PAGO") : iconPill("leaf", "GRÁTIS"),
-      prize ? iconPill("trophy", `Premiação ${prize}`) : ""
+      prize ? iconPill("trophy", `${prize}`) : "",
+      dateTimeTxt ? iconPill("calendar-clock", dateTimeTxt) : "",
+      progressTxt ? iconPill("activity", progressTxt) : ""
     ].filter(Boolean).join("");
+
+    const descHtml = desc ? `<p class="mt-2 text-sm text-slate-600 leading-relaxed clamp-2">${escapeHtml(desc)}</p>` : ``;
 
     return `<article class="group overflow-hidden rounded-3xl border border-slate-200 bg-white shadow-sm transition hover:shadow-md">
       <div class="p-5">
-        <div class="flex items-start gap-3">
+        <div class="flex items-start gap-4">
           ${thumb}
+
           <div class="min-w-0 flex-1">
-            <div class="flex items-start justify-between gap-3">
+            <div class="flex items-start justify-between gap-4">
               <div class="min-w-0">
                 <div class="truncate text-base font-black text-slate-900">${title}</div>
-                <div class="text-xs text-slate-500">Por <span class="font-semibold text-slate-700">${guildName}</span></div>
               </div>
+
               ${link ? `<a href="${link}" target="_blank" rel="noopener noreferrer"
                 class="inline-flex items-center gap-2 rounded-2xl bg-slate-900 px-3 py-2 text-xs font-extrabold text-white shadow-sm transition hover:bg-slate-800">
                 Ver <i data-lucide="arrow-right" class="h-4 w-4"></i>
               </a>` : ``}
             </div>
 
-            ${desc ? `<p class="mt-2 text-sm text-slate-600 leading-relaxed">${desc}</p>` : ``}
+            ${descHtml}
+          </div>
 
-            <div class="mt-3 flex flex-wrap gap-2">
+          <div class="w-[220px] shrink-0 text-right">
+            <div class="flex flex-wrap justify-end gap-2">
               ${topPills}
             </div>
 
-            <div class="mt-4 grid grid-cols-1 gap-2">
-              ${row("map-pin", "Local", location)}
+            <div class="mt-3 grid grid-cols-1 gap-2 justify-items-end">
+              ${location ? row("map-pin", "Local", location) : ``}
               ${t.isXVX ? row("layers", "Formato", modeTxt) : row("zap", "Modo", modeTxt)}
-              ${!t.isXVX ? row("repeat", "Quedas", drops) : ``}
-              ${row("users-2", t.isXVX ? "Equipes" : "Participantes", max)}
+              ${!t.isXVX && drops ? row("repeat", "Quedas", drops) : ``}
+              ${max ? row("users-2", t.isXVX ? "Equipes" : "Participantes", max) : ``}
               ${row("wallet", "Inscrição", feeText)}
             </div>
 
-            ${!link ? `<div class="mt-3 text-xs text-slate-400">Sem link de informações</div>` : ``}
+            ${!link ? `<div class="mt-2 text-xs text-slate-400">Sem link de informações</div>` : ``}
           </div>
         </div>
       </div>
     </article>`;
+
   }).join('');
 
   try { initIcons(); } catch (_) {}
